--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^6.6.1",
     "@stripe/stripe-js": "^1.32.0",
+    "@types/prismic-dom": "^2.1.1",
     "axios": "^0.27.2",
     "faunadb": "^4.5.4",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
+    "prismic-dom": "^2.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
